feat: final proyect

--- a/lab/notebooks/evaluation_lab.ipynb
+++ b/lab/notebooks/evaluation_lab.ipynb
@@ -79,15 +79,15 @@
    ],
    "source": [
     "# Run ElasticSearch previously in docker\n",
-    "docker run -it \\\n",
-    "    --rm \\\n",
-    "    --name elasticsearch \\\n",
-    "    -m 4GB \\\n",
-    "    -p 9200:9200 \\\n",
-    "    -p 9300:9300 \\\n",
-    "    -e \"discovery.type=single-node\" \\\n",
-    "    -e \"xpack.security.enabled=false\" \\\n",
-    "    docker.elastic.co/elasticsearch/elasticsearch:8.4.3\n",
+    "# docker run -it \\\n",
+    "#     --rm \\\n",
+    "#     --name elasticsearch \\\n",
+    "#     -m 4GB \\\n",
+    "#     -p 9200:9200 \\\n",
+    "#     -p 9300:9300 \\\n",
+    "#     -e \"discovery.type=single-node\" \\\n",
+    "#     -e \"xpack.security.enabled=false\" \\\n",
+    "#     docker.elastic.co/elasticsearch/elasticsearch:8.4.3\n",
     "\n",
     "from elasticsearch import Elasticsearch\n",
     "es_client = Elasticsearch('http://localhost:9200') \n",
